# rvc

./: .gitignore  README.md  pal_format.md  rfv_format.md
encoder/: EncodeSizes.ods  colorcalc.go  colorcalcmini.go  colors.go  debug.go  dithering.go  encoding.go  filesequence.go  go.mod  go.sum  hilbert.go  main.go  motion.go  palcomp.go  patterns.go  preview.go  rvffile.go  terminal.go  wave.go
player/: CMakeLists.txt
player/src/: decoding.c  decoding.h  main.c  rvf_decode.c  rvf_decode.h
